# SIOU2

./: .clineignore  .dockerignore  .env.example  .gitignore  DEMARRAGE.md  DEPLOYMENT.md  DOSSIER_TECHNIQUE.md  Dockerfile  PLAN_RAG.md  RAPPORT_AVANCEMENT.md  README.md  fly.toml  main.py  pyproject.toml  render.yaml
.claude/: launch.json
backend/: API_TOKEN_GUIDE.md  api.md
backend/auth/: admin_initial.py
backend/core/: config.py  database.py  deps.py  schema_upgrades.py  security.py
backend/data/: arrete-aof-directions-techniques-mnd.md  arrete-interministeriel-006-label-startup.md  decret-2021-308-aof-mnd.md  decret-2021-401-structure-type-ministeres.md  dossier-agrement-prestataires-prmp-mtdi.md  infos.md
backend/models/: __init__.py  conversation_models.py  document_models.py  feedback_model.py  notification_model.py  user_model.py
backend/notebooks/: evaluation_split.md  rag.ipynb  temp_rag.json  update.md
backend/routers/: admin.py  audio.py  auth.py  chat.py  conversation.py  documents.py  feedbacks.py  notifications.py  stats.py
backend/services/: ingestion.py  llm.py  notification_service.py  rag.py
backend/tests/: conftest.py  test_admin.py  test_audio.py  test_auth.py  test_chat.py  test_conversation.py  test_documents.py  test_feedbacks.py  test_llm_service.py  test_notifications.py  test_semantic_search.py  test_stats.py
frontend/: FRONTEND.md  dashboard.html  index.html  login.html  vercel.json
frontend/components/: sidebar.html  topbar.html
frontend/pages/: 404.html  aide.html  chat-content.html  chat.html  documents.html  (+6 more)
(+58 files in other folders)
