[project]
name = "siou"
version = "0.1.0"
description = "Système intelligent d'Orientation des Usagers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0,<4.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.27.0",
    "passlib>=1.7.4",
    "pgvector>=0.5.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=2.1.4",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
